extends Control


func _on_play_button_pressed() -> void:
	print("Jestem w play")
	pass # Replace with function body.


func _on_help_button_pressed() -> void:
	pass # Replace with function body.


func _on_credits_button_pressed() -> void:
	pass # Replace with function body.


func _on_exit_button_pressed() -> void:
	pass # Replace with function body.
